--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/favicon.png">
 </head>
-<body style="margin: 0;">
-
-	<div style="color: royalblue; width: 800px; margin-left: auto; margin-right: auto;">
-		<h1 style="font-size: 5em; text-align: center;">Ahsanul Moyej</h1>
-		<p style="font-size: 30px; text-align: justify; color: green;"><strong>Lorem ipsum dolor sit,</strong> <i>amet consectetur adipisicing elit.</i> Vitae nam labore veritatis nihil quae commodi harum architecto ipsam eos impedit reprehenderit pariatur, voluptates fuga tempora eius quidem doloribus unde, provident? Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Doloribus iusto nobis ab error illum eos officia, sint labore quae animi placeat voluptate sunt dignissimos architecto, modi! Architecto amet sed laboriosam!</p>
-		<a href="https://www.w3schools.com/tags/tag_a.asp" target="_blank" alt="w3schools">Click</a>
-	
+<body style="background: #000000;">
+<div style="width: 100%; text-align: center;">
+	<div style="width: 80%; margin: auto;">
+		<img src="images/logo.png" alt="logo">
+		<h1 style="font-size:40px; font-weight: 700; color: #ffffff;">About Myself</h1>
+		<p style="font-size: 16px; color: #ffffff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		<a href="https://www.w3schools.com" alt="w3schools" target="_parent">Click Here</a>
+		<p style="color: #ffffff"><b>Lorem ipsum</b> dolor sit amet consectetur adipisicing elit. Consectetur, facilis ipsa commodi obcaecati expedita aliquid quod ex, aliquam totam facere dolorum sunt sequi? Consectetur beatae unde atque dicta, eos, ex.</p>
+	</div>
+</div>	
 </body>
 </html>
